--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,14 @@
   <p>Congratulations! You've found a website that serves no purpose whatsoever.</p>
   <p>There's nothing to click. Nothing to see. Nothing to do.</p>
   <p>Isn't it... liberating?</p>
-  <div class="spinning-useless-thing"></div>
+
+  <div class="spinning-useless-thing-wrapper">
+    <div class="spinning-useless-thing"></div>
+    <div class="useless-hover-text">
+      Why are you even hovering?
+    </div>
+  </div>
+
   <p>Still here? Amazing.</p>
   <p>Consider your time well spent... or not.</p>
 </div>
